[tool.poetry]
name = "nonebot-plugin-morning"
version = "0.1.1"
description = "Good morning & good night!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "2.0.0-alpha.16"
nonebot-adapter-cqhttp = "2.0.0-alpha.16"
nonebot-plugin-apscheduler = "^0.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
default = true
